--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.24.4",
     "node-sass": "^7.0.3",
+    "rc-virtual-list": "^3.4.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.1.0",
