--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "@reduxjs/toolkit": "^1.8.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.24.4",
-    "node-sass": "^7.0.3",
-    "rc-virtual-list": "^3.4.11",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "antd": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-number-format": "^5.1.0",
-    "react-redux": "^8.0.4",
-    "react-router": "^6.4.2",
-    "react-router-dom": "^6.4.2",
+    "react-number-format": "^5.1.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "sass": "^1.56.1",
+    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
