--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "antd": "^5.0.4",
+    "netlify-cli": "^12.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.1.2",
